generated/checkers/refine/KN-Out-of-Bound-13e788de-0/build_logs/syntax-repair-refine-1-1/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::isBufferCapacityComparison(const clang::Expr*, const clang::Expr*, clang::ento::CheckerContext&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:320:16: error: ‘class llvm::StringRef’ has no member named ‘equals_lower’
  320 |     if ((LName.equals_lower("len") || LName.equals_lower("length") || LName.equals_lower("size")) &&
      |                ^~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:320:45: error: ‘class llvm::StringRef’ has no member named ‘equals_lower’
  320 |     if ((LName.equals_lower("len") || LName.equals_lower("length") || LName.equals_lower("size")) &&
      |                                             ^~~~~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-2/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:320:77: error: ‘class llvm::StringRef’ has no member named ‘equals_lower’
  320 |     if ((LName.equals_lower("len") || LName.equals_lower("length") || LName.equals_lower("size")) &&
      |                                                                             ^~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:29772: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:29779: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
